ensure Contact icons are still visible on dark background

--- a/style/contact.css
+++ b/style/contact.css
@@ -21,6 +21,8 @@
     border-radius: 10px;
     font-size: 3vw;
     transition: 200ms;
+    backdrop-filter: brightness(0) invert(1) grayscale(1) contrast(150%); 
+
 }
 
 .contactIcon:hover {
