--- a/style/projects.css
+++ b/style/projects.css
@@ -23,7 +23,7 @@
   }
   
   #projects .post:hover {
-    max-width: 42%;
+    max-width: 43%;
     /* border: 10px solid darkcyan; */
   }
   
